src/tests/snapshots/ppl__tests__missing_fields.error.snap
---
source: src/tests/mod.rs
expression: err
---
Error: semantics::missing_fields

  × type `Point` has missing fields: [`x`]
   ╭─[main.ppl:4:1]
 3 │ 
 4 │ Point { y: 1 }
   · ──┬──
   ·   ╰── missing fields: [`x`]
   ╰────
